fix: adjust gap, margin, and padding in drag_area for improved layout

--- a/board/board.css
+++ b/board/board.css
@@ -177,13 +177,13 @@ main {
   max-height: 100%;
   width: 100%;
   display: flex;
-  gap: 16px;
+  gap: 25px;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   height: 100%;
-  margin: 0 -50px;
-  padding: 0 50px;
+  margin: 0 -25px;
+  padding: 0 20px;
   overflow-y: auto;
   overflow-x: clip;
 }
